[tool.poetry]
name = "path-chronicle"
version = "0.1.1"
description = ""
authors = ["Suzuki Kakeru <kakeruuuuuu0114@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
pcmkdir = 'path_chronicle.path_manager:create_dir_entry'
pctouch = 'path_chronicle.path_manager:create_file_entry'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
