[tool.poetry]
name = "path-chronicle"
version = "0.1.1"
description = ""
authors = ["Suzuki Kakeru <kakeruuuuuu0114@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
pcmkdir = 'path_chronicle.interface:create_dir_entry'
pctouch = 'path_chronicle.interface:create_file_entry'
pcpathslist = 'path_chronicle.interface:list_paths_entry'
pcrmpath = 'path_chronicle.interface:remove_path_entry'
gpaths = 'path_chronicle.interface:generate_paths_entry'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.11.0"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
